--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,16 +30,24 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.libthrift-0.9.2.jar=C:\\Users\\AgungPras BSK\\Documents\\Pengembangan Aplikasi Terdistribusi\\libthrift-0.9.2.jar
+file.reference.libthrift-0.9.2.jar-1=lib\\libthrift-0.9.2.jar
 file.reference.log4j-1.2.14.jar=C:\\Users\\AgungPras BSK\\Documents\\Pengembangan Aplikasi Terdistribusi\\lib\\lib\\log4j-1.2.14.jar
+file.reference.log4j-1.2.14.jar-1=lib\\log4j-1.2.14.jar
 file.reference.slf4j-api-1.5.8.jar=C:\\Users\\AgungPras BSK\\Documents\\Pengembangan Aplikasi Terdistribusi\\lib\\lib\\slf4j-api-1.5.8.jar
+file.reference.slf4j-api-1.5.8.jar-1=lib\\slf4j-api-1.5.8.jar
 file.reference.slf4j-log4j12-1.5.8.jar=C:\\Users\\AgungPras BSK\\Documents\\Pengembangan Aplikasi Terdistribusi\\lib\\lib\\slf4j-log4j12-1.5.8.jar
+file.reference.slf4j-log4j12-1.5.8.jar-1=lib\\slf4j-log4j12-1.5.8.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.libthrift-0.9.2.jar}:\
     ${file.reference.log4j-1.2.14.jar}:\
     ${file.reference.slf4j-api-1.5.8.jar}:\
-    ${file.reference.slf4j-log4j12-1.5.8.jar}
+    ${file.reference.slf4j-log4j12-1.5.8.jar}:\
+    ${file.reference.libthrift-0.9.2.jar-1}:\
+    ${file.reference.log4j-1.2.14.jar-1}:\
+    ${file.reference.slf4j-api-1.5.8.jar-1}:\
+    ${file.reference.slf4j-log4j12-1.5.8.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
